--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "ts-node-dev": "^1.0.0-pre.49"
   },
   "scripts": {
-    "start": "ts-node ./src",
-    "dev": "ts-node-dev ./src"
+    "start": "ts-node ./src/app.ts",
+    "dev": "ts-node-dev ./src/app.ts"
   },
   "dependencies": {
+    "@types/express": "^4.17.6",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
   }
