--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "dev": "ts-node-dev ./src/app.ts"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
+    "@types/mongoose": "^5.7.24",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.9.19",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
   }
