--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@types/crypto-js": "^3.1.47",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
+    "@types/express-formidable": "^1.0.4",
     "@types/jest": "^26.0.0",
     "@types/mongoose": "^5.7.24",
     "@types/randomstring": "^1.1.6",
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-formidable": "^1.2.0",
     "mongoose": "^5.9.19",
     "randomstring": "^1.1.5",
+    "ts-mailgun": "^0.4.2",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
   }
