--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/cors": "^2.8.6",
     "@types/crypto-js": "^3.1.47",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
@@ -21,6 +22,7 @@
     "@types/jest": "^26.0.0",
     "@types/mongoose": "^5.7.24",
     "@types/randomstring": "^1.1.6",
+    "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
